[tool.poetry]
name = "graph-test"
version = "0.1.0"
description = ""
authors = ["drose <david@drose.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.2.9"
langgraph = "^0.1.0"
langchain-openai = "^0.1.17"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
