[tool.poetry]
name = "meme-maker"
version = "0.1.0"
description = "makes memes with AI agents"
authors = ["drose <david@drose.io>"]
readme = "README.md"
packages = [{include = "meme-maker"}]

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.2.9"
langgraph = "^0.1.0"
langchain-openai = "^0.1.17"
langchain-community = "^0.2.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
